add google/FB API log-in

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+   <script src="https://apis.google.com/js/api:client.js"></script>
+   <meta name="google-signin-client_id" content="508912060316-3codt6ul3fnne8hi7shfsttdfkl9qs8a.apps.googleusercontent.com">
+  
+
   </head>
   <body>
     <noscript>
@@ -14,4 +18,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  
 </html>
